# GoldpricePrediction

./: .gitignore  AuthNorm_Migration_Requirements_Spec_v1.docx  Banking_Data_Platform_Architecture_v3.html  ChangePilot-Studio.code-workspace  Data_Platform_Architecture_V1.html  GBS_Auth_Combined_v55.drawio  GBS_Auth_Migration_Architecture_8.drawio  GBS_Auth_RT_Migration_Tracker.xlsx  GoldPricePrediction_V1.ipynb  README.md  agent_tools_context.txt  data-factory-pipeline-architecture.html  enterprise-ai-agent-architecture_final.html  setup.ps1  setup.sh  start.ps1  start.sh  v2-REQUIREMENTS.md  v2-architecture.html
.github/: copilot-instructions.md
.github/skills/: __init__.py  base.py
.github/skills/_shared/: __init__.py  llm_helper.py  (+2 more)
Agents/: README.md  __init__.py
Agents/Core/: __init__.py  memory.py  model.py  observability.py  schemas.py
Agents/MasterAgent/: __init__.py  action.py  agent.py  perception.py  planning.py  reasoning.py
Agents/Prompts/: README.md
Agents/SubAgents/: __init__.py  base.py
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: intelligence.py  v1.py
backend/app/core/: confidence.py  logging.py
backend/app/db/: models.py  session.py
backend/app/github/: client.py  webhooks.py
backend/app/workers/: review_job.py
backend/prompts/: chat_assistant.md
backend/scripts/: seed_demo.py
backend/tests/: test_smoke.py
frontend/: dev-vite.bat  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
(+157 files in other folders)
