[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "changepilot-studio"
version = "0.2.0"
description = "ChangePilot Studio — The Intelligent Platform for Reviews, Governance & Releases"
requires-python = ">=3.11"
authors = [{name = "Fiserv DCS Platform"}]

dependencies = [
  # Web framework · loose pins to coexist with google-adk's transitive deps
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.5,<3.0",

  # Persistence
  "SQLAlchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",

  # Google ADK + Databricks Claude bridge
  # ADK uses LiteLLM under the hood for non-Google models · no LangChain.
  "google-adk>=1.0,<2.0",
  "litellm>=1.51,<2.0",

  # GitHub integration
  "PyGithub>=2.4,<3.0",
  "httpx>=0.27,<1.0",

  # Rules + YAML
  "PyYAML>=6.0,<7.0",
  "Jinja2>=3.1,<4.0",

  # Observability
  "structlog>=24.4,<26.0",

  # Utility
  "python-multipart>=0.0.12,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<2.0",
  "ruff>=0.6,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]   # line length (handled by formatter)

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
